# opcua-pnp-depr

./: CMakeLists.txt  README.md  pnp-nodes.cpp
aruco/: CMakeLists.txt  component.cfg  run_template.in.sh
aruco/certs/client/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
aruco/certs/server/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
aruco/lib/: ArUco.h
aruco/model/Published/ArUcoModel/: ArUco.Classes.cs  ArUco.Constants.cs  ArUco.DataTypes.cs  ArUco.NodeSet.xml  ArUco.NodeSet2.xml  ArUco.PredefinedNodes.uanodes  ArUco.PredefinedNodes.xml  ArUco.Types.bsd  ArUco.Types.xsd  ArUcoModel.csv  ArUcoModel.xml
aruco/src/: ArUco.cpp  main.cpp
camera/: CMakeLists.txt  component.cfg  run_template.in.sh
camera/certs/client/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
camera/certs/server/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
camera/lib/: Camera.h  CameraDevice.h  CameraDeviceProperties.hpp  CameraFrameParam.h  CvDevice.h  ImageFrameSkillImpl.h  ImageFrameSkillImpl.hpp  Webcam.hpp
camera/model/: CameraModel.csv  CameraModel.xml
camera/model/Published/CameraModel/: Camera.Classes.cs  Camera.Constants.cs  Camera.DataTypes.cs  Camera.NodeSet.xml  Camera.NodeSet2.xml  Camera.PredefinedNodes.uanodes  Camera.PredefinedNodes.xml  Camera.Types.bsd  Camera.Types.xsd  CameraModel.csv  CameraModel.xml
camera/src/: Camera.cpp  CameraDevice.cpp  CameraFrameParam.cpp  CameraFrameParam_deprecated.cpp  CvDevice.cpp  ImageSkillsImpl.cpp  main.cpp
camera/tests/: CMakeLists.txt  test_cvdevice.cpp
composite-skills/: CMakeLists.txt  component.cfg  run_template.in.sh
composite-skills/certs/client/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
composite-skills/certs/server/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
composite-skills/lib/: CompositeSkills.h  RTMarkerDetectionSkillImpl.h
composite-skills/model/: CompositeSkillsModel.csv
composite-skills/model/Published/CompositeSkillsModel/: CompositeSkills.Classes.cs  CompositeSkills.Constants.cs  CompositeSkills.DataTypes.cs  CompositeSkills.NodeSet.xml  CompositeSkills.NodeSet2.xml  CompositeSkills.PredefinedNodes.uanodes  CompositeSkills.PredefinedNodes.xml  CompositeSkills.Types.bsd  CompositeSkills.Types.xsd  CompositeSkillsModel.xml
composite-skills/src/: CompositeSkills.cpp  RTMarkerDetectionSkillImpl.cpp  main.cpp
include/opcua/: CMakeLists.txt
include/opcua/client/: GenericSkillClient.cpp  RegisteredComponent.cpp  RegisteredSkill.cpp  SkillClient.cpp  SkillClientParameter.cpp  SkillDetector.cpp  SkillParameter.cpp
include/opcua/include/: FiniteStateMachine.hpp  OpcUaServer.h  Program.hpp  ProgramState.hpp  ProgramTransition.hpp  SkillBase.hpp  SkillImpl.hpp  SkillParameter.hpp  SkillRunMutex.hpp  helper.hpp  logging.h  logging_opcua.h  synchronized.hpp
include/opcua/include/client/: GenericSkillClient.h  RegisteredComponent.h  RegisteredSkill.h  SkillClient.h  SkillClientParameter.h  SkillDetector.h  SkillHelper.hpp  SkillParameter.h
include/opcua/include/skills/camera/: ImageFrameSkill.hpp  ImageSkill.hpp  ImageStreamSkill.hpp
include/opcua/include/skills/composed/: RTMarkerDetectionSkill.hpp
include/opcua/server/: OpcUaServer.cpp
nodeset/: CMakeLists.txt
nodeset/DeviceModel/Published/DeviceModel/: DeviceModel.csv  fortiss_Device.Classes.cs  fortiss_Device.Constants.cs  fortiss_Device.DataTypes.cs  fortiss_Device.NodeSet.xml  fortiss_Device.NodeSet2.xml  fortiss_Device.PredefinedNodes.uanodes  fortiss_Device.PredefinedNodes.xml  fortiss_Device.Types.bsd  fortiss_Device.Types.xsd
nodeset/PnPTypes/: PnPTypes.csv  PnPTypes.xml
nodeset/PnPTypes/Published/PnPTypes/: PnPTypes.Classes.cs  PnPTypes.Constants.cs  PnPTypes.DataTypes.cs  PnPTypes.NodeSet.xml  PnPTypes.NodeSet2.xml  PnPTypes.PredefinedNodes.uanodes  PnPTypes.PredefinedNodes.xml  PnPTypes.Types.bsd  PnPTypes.Types.xsd
semantic-mes/: CMakeLists.txt  component.cfg  run_template.in.sh
semantic-mes/certs/client/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
semantic-mes/certs/server/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
semantic-mes/lib/: PnpSemanticMes.h  SemanticMes.h
semantic-mes/src/: PnpSemanticMes.cpp  SemanticMes.cpp  main.cpp
